nixrs-derive-tests/tests/ui/parse_bad_default_path.stderr
error: expected identifier
 --> tests/ui/parse_bad_default_path.rs
  |
  |     #[nix(default = "12")]
  |                     ^^^^
